Fix z-index, fix gene tracks bug

--- a/src/style/modal.scss
+++ b/src/style/modal.scss
@@ -1,5 +1,5 @@
 .modal-background {
-    z-index: 104;
+    z-index: 107;
     top: 0;
     left: 0;
     position: fixed;
@@ -9,7 +9,7 @@
     opacity: 0.4;
 }
 .modal {
-    z-index: 105;
+    z-index: 108;
     top: 10vh;
     left: 10%;
     height: 80vh;
